--- a/package.json
+++ b/package.json
@@ -36,7 +36,15 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "generator-star-spacing": "off",
+      "no-tabs": "off",
+      "no-unused-vars": "off",
+      "no-console": "off",
+      "no-irregular-whitespace": "off",
+      "no-debugger": "off",
+      "vue/no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
